--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "job-offers-dashboard",
+  "name": "jobhunter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,20 +22,21 @@
     "source-map-js": "^1.2.1"
   },
   "devDependencies": {
-    "@tanstack/router-vite-plugin": "^1.16.3",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "10.4.20",
-    "tailwindcss": "3.4.17",
-    "postcss": "8.4.49",
-    "typescript": "5.7.3",
-    "vite": "^6.0.11",
     "@babel/core": "^7.26.10",
     "@babel/generator": "^7.27.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@babel/traverse": "^7.27.0",
-    "@babel/types": "^7.27.0"
+    "@babel/types": "^7.27.0",
+    "@tanstack/router-vite-plugin": "^1.16.3",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.3",
+    "vite": "^6.0.11",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
